--- a/Reg/views/index.hbs
+++ b/Reg/views/index.hbs
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       {{!-- <link rel="stylesheet" href="/stylesheets/style.css"> --}}
       <link rel="shortcut icon" href="./src/images/logo.jpeg" type="image/x-icon">
-      <link rel="stylesheet" href="/views/style.css">
+      <link rel="stylesheet" href="views/style.css">
 </head>
 
 <body>
@@ -55,6 +55,9 @@
 
                   {{#if msg2}}
                   <div>{{msg2}}</div>
+                  {{/if}}
+                  {{#if msg3}}
+                  <div>{{msg3}}</div>
                   {{/if}}
                         <div class="form-group">
                               <label for="name">Name</label>
