--- a/Reg/views/index.hbs
+++ b/Reg/views/index.hbs
@@ -8,8 +8,8 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       {{!-- <link rel="stylesheet" href="/stylesheets/style.css"> --}}
-      <link rel="shortcut icon" href="./src/images/logo.jpeg" type="image/x-icon">
-      <link rel="stylesheet" href="views/style.css">
+      <link rel="shortcut icon" href="/images/logo.jpeg" type="image/x-icon">
+      <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
       <section class="nav-bk-blue">
             <div class="container">
                   <nav class="navbar navbar-dark navbar-expand-lg pb-4">
-                        <img src="./src/images/logo.jpeg" class="nav-logo">
+                        <img src="/images/logo.jpeg" class="nav-logo">
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                               data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                               aria-label="Toggle navigation">
