--- a/Reg/Public/style.css
+++ b/Reg/Public/style.css
@@ -1,123 +1,143 @@
-* {
-  margin: 0%;
-  padding: 0%;
-  font-family: 'DM Sans', sans-serif;
-}
-
-body {
-  background-image: url("../images/bg.jpg");
-  background-repeat: repeat;
-  background-size: cover;
-  color: white;
-  font-family: "DM Sans";
-}
-
-.menu-bar .div {
-  display: flex;
-  padding: 20px;
-  align-items: center;
-  justify-content: space-between;
-}
-
-
-
-.menu-bar img {
-  width: 150px;
-  /* padding: 20px; */
-}
-
-.menu-bar div.links {
-  display: flex;
-}
-
-.menu-bar div.links a {
-  padding: 15px;
-  text-decoration: none;
-  color: white;
-}
-
-.labels {
-  color: white;
-  text-align: center;
-}
-
-form input,
-select {
-  color: white;
-  background: rgba(170, 163, 163, 0.45);
-  box-shadow: 0px 4.67554px 4.67554px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-}
-
-main .box {
-  width: 80%;
-  height: 320px;
-  /* left: 0; */
-  /* top: 1319px; */
-  background: rgba(217, 217, 217, 0.1);
-  border-radius: 20px;
-}
-
-.box {
-  margin-top: 250px !important;
-}
-
-.nav-bk-blue {
-  width: 100vw;
-  top: 0%;
-}
-
-.nav-logo {
-  margin-top: 20px;
-  width: 50px;
-  border-radius: 100%;
-}
-
-.nav-item {
-  margin-left: 50px;
-  margin-top: 20px;
-}
-
-.nav-item a {
-  color: #fff !important;
-  font-size: 16px;
-  font-family: 'DM Sans', sans-serif;
-  font-weight: 600;
-}
-
-.nav-item a:hover {
-  color: gainsboro !important;
-}
-
-.nav-bottom-hr {
-  border: thin blue;
-}
-
-@media only screen and (max-width: 1200px) {
-  .nav-item {
-    margin-left: 30px;
+.form-all {
+    font-family: Inter, sans-serif;
+  }
+  .form-all .qq-upload-button,
+  .form-all .form-submit-button,
+  .form-all .form-submit-reset,
+  .form-all .form-submit-print {
+    font-family: Inter, sans-serif;
+  }
+  .form-all .form-pagebreak-back-container,
+  .form-all .form-pagebreak-next-container {
+    font-family: Inter, sans-serif;
+  }
+  .form-header-group {
+    font-family: Inter, sans-serif;
+  }
+  .form-label {
+    font-family: Inter, sans-serif;
   }
 
-  .nav-item a {
-    font-size: 15px;
-  }
-}
+  
 
-@media only screen and (min-width: 992px) {
-  .navbar-nav {
-    margin-left: 250px;
-    position: sticky;
-    top: 0;
+  .form-line {
+    margin-top: 12px 36px 12px 36px px;
+    margin-bottom: 12px 36px 12px 36px px;
+  }
+
+  .form-all {
+    max-width: 752px;
     width: 100%;
   }
-}
 
-@media only screen and (max-width: 991px) {
-  .navbar-toggler {
-    margin-top: 20px !important;
+  .form-label.form-label-left,
+  .form-label.form-label-right,
+  .form-label.form-label-left.form-label-auto,
+  .form-label.form-label-right.form-label-auto {
+    width: 230px;
   }
 
-  .nav-link {
-    margin-left: 30px;
+  .form-all {
+    font-size: 16px
   }
+  .form-all .qq-upload-button,
+  .form-all .qq-upload-button,
+  .form-all .form-submit-button,
+  .form-all .form-submit-reset,
+  .form-all .form-submit-print {
+    font-size: 16px
+  }
+  .form-all .form-pagebreak-back-container,
+  .form-all .form-pagebreak-next-container {
+    font-size: 16px
+  }
+
+  .supernova .form-all, .form-all {
+    background-color: #fff;
+  }
+
+  .form-all {
+    color: #2C3345;
+  }
+  .form-header-group .form-header {
+    color: #2C3345;
+  }
+  .form-header-group .form-subHeader {
+    color: #2C3345;
+  }
+  .form-label-top,
+  .form-label-left,
+  .form-label-right,
+  .form-html,
+  .form-checkbox-item label,
+  .form-radio-item label,
+  span.FITB .qb-checkbox-label,
+  span.FITB .qb-radiobox-label,
+  span.FITB .form-radio label,
+  span.FITB .form-checkbox label,
+  [data-blotid][data-type=checkbox] [data-labelid],
+  [data-blotid][data-type=radiobox] [data-labelid],
+  span.FITB-inptCont[data-type=checkbox] label,
+  span.FITB-inptCont[data-type=radiobox] label {
+    color: #2C3345;
+  }
+  .form-sub-label {
+    color: #464d5f;
+  }
+
+  .supernova {
+    background-color: #659cdb;
+  }
+  .supernova body {
+    background: transparent;
+  }
+
+  .form-textbox,
+  .form-textarea,
+  .form-dropdown,
+  .form-radio-other-input,
+  .form-checkbox-other-input,
+  .form-captcha input,
+  .form-spinner input {
+    background-color: #ffffff;
+  }
+
+  .supernova {
+    background-image: none;
+  }
+  #stage {
+    background-image: none;
+  }
+
+  .form-all {
+    background-image: none;
+  }
+
+.ie-8 .form-all:before { display: none; }
+.ie-8 {
+  margin-top: auto;
+  margin-top: initial;
 }
+
+/*PREFERENCES STYLE*//*__INSPECT_SEPERATOR__*/.form-header-group.header-small {
+  padding: 20px 52px !important;
+  border-radius : 6px 6px 0 0;
+  border-top: 1px solid #eee;
+  margin: 0 -38px;
+  border-bottom: 0;
+}
+
+.form-header-group.header-small h3 {
+  text-transform : uppercase;
+  font-size : 26px;
+  font-weight : 400;
+  text-align : left;
+}
+.form-label.form-label-auto {
+      
+      display: inline-block;
+      float: left;
+      text-align: left;
+    
+    }
+  /* Injected CSS Code */
