--- a/Reg/views/index.hbs
+++ b/Reg/views/index.hbs
@@ -248,36 +248,33 @@
                                                 </div>
                                           </div>
                                     </li>
-                                    <li class="form-line form-line-column form-col-1 jf-required"
-                                          data-type="control_rating" id="id_26"><label class="form-label form-label-top"
-                                                id="label_26" for="programming_knowledge"> How well you know programming<span
-                                                      class="form-required">*</span> </label>
-                                          <div id="cid_26" class="form-input-wide jf-required" data-layout="full">
-                                                <div id="programmingknowledge" name="programming_knowledge" data-component="rating"
-                                                      data-version="v2"><select name="programming_knowledge" id="programming_knowledge">
-                                                            <option value="1">1</option>
-                                                            <option value="2">2</option>
-                                                            <option value="3">3</option>
-                                                            <option value="4">4</option>
-                                                            <option value="5">5</option>
-                                                      </select></div>
-                                          </div>
-                                    </li>
-                                    <li class="form-line form-line-column form-col-2 jf-required"
-                                          data-type="control_rating" id="id_27"><label class="form-label form-label-top"
-                                                id="label_27" for="web_knowledge"> How well you know HTML,CSS,JS<span
-                                                      class="form-required">*</span> </label>
-                                          <div id="cid_27" class="form-input-wide jf-required" data-layout="full">
-                                                <div id="web_knowledge" name="web_knowledge" data-component="rating"
-                                                      data-version="v2"><select name="web_knowledge" id="web_knowledge">
-                                                            <option value="1">1</option>
-                                                            <option value="2">2</option>
-                                                            <option value="3">3</option>
-                                                            <option value="4">4</option>
-                                                            <option value="5">5</option>
-                                                      </select></div>
-                                          </div>
-                                    </li>
+                                    <li class="form-line form-line-column form-col-1 jf-required" data-type="control_rating" id="id_26"><label
+            class="form-label form-label-top" id="label_26" for="input_26"> How well you know programming<span
+              class="form-required">*</span> </label>
+          <div id="cid_26" class="form-input-wide jf-required" data-layout="full">
+            <div id="input_26" name="programming_knowledge" data-component="rating" data-version="v2"><select name="programming_knowledge">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select></div>
+          </div>
+        </li>
+        <li class="form-line form-line-column form-col-2 jf-required" data-type="control_rating" id="id_27"><label
+            class="form-label form-label-top" id="label_27" for="input_27"> How well you know HTML,CSS,JS<span
+              class="form-required">*</span> </label>
+          <div id="cid_27" class="form-input-wide jf-required" data-layout="full">
+            <div id="input_27" name="web_knowledge" data-component="rating" data-version="v2"><select
+                name="web_knowledge">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select></div>
+          </div>
+        </li>
                                     <li class="form-line form-line-column form-col-3 jf-required"
                                           data-type="control_dropdown" id="id_8"><label
                                                 class="form-label form-label-top form-label-auto" id="label_8"
