--- a/views/index.hbs
+++ b/views/index.hbs
@@ -93,7 +93,7 @@
                     <div style="line-height: 14px;">
                       <div style="font-size: 8pt;">csi@sjcetpalai.ac.in
                       </div>
-                      <div style="font-size: 8pt;">www.example.com</div>
+                      {{!-- <div style="font-size: 8pt;">www.example.com</div> --}}
                     </div>
                   </div>
                 </div>
