--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,8 +13,8 @@
   <meta property="og:url" content="">
   <meta property="og:description" content="Please click the link to complete this form.">
   <meta name="slack-app-id" content="AHNMASS8M">
-  <meta property="og:image" content="/images/logo.jpeg" />
-  <link rel="shortcut icon" href="/images/logo.jpeg">
+  <meta property="og:image" content="/images/logo.png" />
+  <link rel="shortcut icon" href="/images/logo.png">
   <!-- <script>
           var favicon = document.querySelector('link[rel="shortcut icon"]');
           window.isDarkMode = (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches);
