--- a/views/success.hbs
+++ b/views/success.hbs
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/images/logo.jpeg"
+    <link href="/images/logo.png"
         rel="icon">
 
     <!-- Custom CSS -->
