--- a/views/index.hbs
+++ b/views/index.hbs
@@ -72,7 +72,7 @@
 
 
 
-        
+
         <div role="main" class="form-all">
           <ul class="form-section page-section">
             <li class="form-line form-line-column form-col-1" data-type="control_image" id="id_17">
@@ -139,7 +139,8 @@
                 </span> </div>
             </li>
             <li class="form-line form-line-column form-col-2" data-type="control_email" id="id_6"><label
-                class="form-label form-label-top form-label-auto" id="label_6" for="email"> E-mail </label>
+                class="form-label form-label-top form-label-auto" id="label_6" for="email"> E-mail<span
+                  class="form-required">*</span></label>
               <div id="cid_6" class="form-input-wide" data-layout="half"> <span class="form-sub-label-container"
                   style="vertical-align:top"><input type="email" id="email" name="email"
                     class="form-textbox validate[Email]" data-defaultvalue="" style="width:310px" size="310" value=""
