--- a/views/index.hbs
+++ b/views/index.hbs
@@ -262,7 +262,7 @@
                 </select>
               </div>
             </li>
-            <li class="form-line form-line-column form-col-4 jf-required form-field-hidden" style="display:none;"
+            {{!-- <li class="form-line form-line-column form-col-4 jf-required form-field-hidden" style="display:none;"
               data-type="control_textbox" id="id_9"><label class="form-label form-label-top form-label-auto"
                 id="label_9" for="input_9"> Please Specify<span class="form-required">*</span>
               </label>
@@ -270,7 +270,7 @@
                   name="q9_pleaseSpecify" data-type="input-textbox" class="form-textbox validate[required]"
                   data-defaultvalue="" style="width:310px" size="310" value="" placeholder=" " data-component="textbox"
                   aria-labelledby="label_9" required="required" /> </div>
-            </li>
+            </li> --}}
             <li class="form-line" data-type="control_textarea" id="id_11"><label class="form-label form-label-top"
                 id="label_11" for="questions"> Any
                 Queries or suggestion: </label>
