--- a/views/success.hbs
+++ b/views/success.hbs
@@ -27,8 +27,9 @@
     <div class="container">
     <div class="row">
         <div class="main-box col-lg-5 col-md-8 mx-auto p-4 rounded">
-            <h2 class="text-center fw-bold mb-5">React Workshop Registration</h2>
-            <h1 class="text-center fw-bold mt-5">Success</h1>
+            <h1 class="text-center fw-bold mb-5">React Workshop Registration</h1>
+            <h2 class="text-center fw-bold mt-5">Success</h2>
+            <h4><a href="https://chat.whatsapp.com/D5rHYxN2xU60z6QQloYtqR" target="_blank">Join <span><img src="/images/wh.png"></span> group</a></h4>
             <div class="mt-5 d-flex justify-content-center">
         </div>
     </div>
