--- a/views/index.hbs
+++ b/views/index.hbs
@@ -175,10 +175,10 @@
               </div>
             </li>
             <li class="form-line form-line-column form-col-2 jf-required" data-type="control_dropdown" id="id_20"><label
-                class="form-label form-label-top" id="label_20" for="branch">
+                class="form-label form-label-top" id="label_20" for="batch">
                 Batch<span class="form-required">*</span> </label>
               <div id="cid_20" class="form-input-wide jf-required" data-layout="half">
-                <select class="form-dropdown validate[required]" id="batch" name="branch" style="width:310px"
+                <select class="form-dropdown validate[required]" id="batch" name="batch" style="width:310px"
                   data-component="dropdown" required="required" aria-label="Batch">
                   <option value="">Please Select</option>
                   <option value="A">A</option>
